fix for menu and map height on mobile

--- a/app/assets/stylesheets/_locations.css.scss
+++ b/app/assets/stylesheets/_locations.css.scss
@@ -9,13 +9,14 @@
 }
 
 #google-map-wrapper{
-	height: 40rem;
 	width: 100%;
+	height: 20rem;
 	@media #{$tablet}{
+		height: 40rem;
 		display: flex;
 		flex: 1 0 75%;
 		flex-direction: column;
-		min-height: 550px;
+		min-height: 35rem;
 		width: auto;
 		#google-map{
 			flex: 1 0 100%;
@@ -67,6 +68,6 @@
 }
 
 #google-map{
-	min-height: 550px;
+	height: 100%;
 	width: 100%;
 }
